# vde_switch

./: CMakeLists.txt  README.md  main.c
includes/: basic_dt.h  cli_support.h  dynload.h  html.h  mgmt.h  module_interop.h  port.h
mods/: CMakeLists.txt  cli.c  cpp_test.cpp  test.c
mods/basic_dt/: basic_dt.c
mods/cli/: cli.c
mods/datasock/: datasock.c  hash.c  port.c  qtimer.c  utils.c
mods/webserver/: cJSON.c  html.c  webserver.c
presets/: default.json  with_cli.json
src/: debug.h  modloader.c
src/mgmt_plane/: mgmt.c
